--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,11 +1,46 @@
 <header class="header">
-  <div class="header__container">
-    <a href="#" class="header__logo logo"></a>
-    <nav class="header__menu menu">
-      <ul class="menu__list">
-        <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
-      </ul>
-    </nav>
-    <!-- @@include('./iconMenu.html', {}) -->
-  </div>
+    <div class="header__container">
+        <div class="header__content">
+            <div class="header__lists">
+                <ul class="header__list ">
+                    <li class="header__list-item">
+                        <a href="#" class="header__list-link first-link">
+                            Мастер-классы
+                        </a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="#" class="header__list-link">
+                            Мебель на заказ
+                        </a>
+                    </li>
+                </ul>
+                <ul class="header__list">
+                    <li class="header__list-item">
+                        <a href="#" class="header__list-link first-link">
+                            Контакты
+                        </a>
+                    </li>
+                    <li class="header__list-item">
+                        <a href="#" class="header__list-link">
+                            О нас
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="header__symbols">
+                <div class="header__logo">
+                    <img src="../images/logo.svg" alt="logo" class="header__logo-pic">
+                </div>
+                <div class="menu-btn js-menu-btn">
+                    <div class="menu-btn__wrap">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 </header>
