aded show-btn script without animation

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,7 +4,7 @@
             <div class="header__lists">
                 <ul class="header__list ">
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link first-link">
+                        <a href="#" class="header__list-link active-link">
                             Мастер-классы
                         </a>
                     </li>
@@ -16,7 +16,7 @@
                 </ul>
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link first-link">
+                        <a href="#" class="header__list-link">
                             Контакты
                         </a>
                     </li>
@@ -27,19 +27,22 @@
                     </li>
                 </ul>
             </div>
-            <div class="header__symbols">
-                <div class="header__logo">
-                    <img src="../images/logo.svg" alt="logo" class="header__logo-pic">
-                </div>
-                <div class="menu-btn js-menu-btn">
-                    <div class="menu-btn__wrap">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+            <div class="header__logo">
+                <img src="../images/logo.png" alt="logo" class="header__logo-pic">
+            </div>
+        </div>
+        <div class="menu__bg">
+            <div class="menu-btn js-menu-btn">
+                <div class="menu-btn__wrap">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
+
+
+
 
 
     </div>
