added About section

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,63 @@
                     </div>
                 </div>
             </section>
+            <section class="section">
+                <div class="container">
+                    <div class="about">
+                        <div class="about__content">
+                            <div class="about__title">NIKASON BRAND это</div>
+                            <div class="about__offers">
+                                <div class="about__offers-item">Производство авторской мебели из массива</div>
+                                <div class="about__offers-item">Реставрация, редизайн, ремонт деревянной мебели</div>
+                                <div class="about__offers-item">Производство мебели по индивидуальным размерам</div>
+                            </div>
+                            <div class="about__subtitle width-mini">Более 10 лет мы производим</div>
+                            <div class="about__categories">
+                                <div class="about__categories-item">
+                                    <img src="./images/door.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Двери</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/closet.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Шкафы</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/chair.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Столы и стулья</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/drawers.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Комоды</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/drawer.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Тумбы</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/gate.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Арки</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/room-divider.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Перегородки</span>
+                                </div>
+                                <div class="about__categories-item">
+                                    <img src="./images/bed.png" alt="item-pic" class="about__categories-pic">
+                                    <span class="about__categories-text">Кровати</span>
+                                </div>
+                            </div>
+                            <div class="about__subtitle width-medium">NIKASON BRAND это семейная мастеркая</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="masters">
 
+                    </div>
+                </div>
+            </section>
         </main>
 
         @@include('html/footer.html', {})
