aded masters block

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,21 @@
             <section class="section">
                 <div class="container">
                     <div class="masters">
+                        <div class="masters__img">
+                            <img src="./images/masters-img.jpg" alt="masters-photo" class="masters__img-pic">
+                        </div>
+                        <div class="masters__content">
+                            <div class="masters__content-title">Саргылана и Никита Колодезниковы-Матчитовы</div>
+                            <div class="masters__content-text">Саргылана - рестовратор-декоратор, преображает и дарит
+                                вторую
+                                жизнь старой мебели.</div>
+                            <div class="masters__content-text">Никита - мастер по дереву, вся мебель делается его
+                                умелыми
+                                руками.</div>
+                            <div class="masters__content-btn">
+                                <a class="masters__content-btnLink btn-green">Подробнее о нас</a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
