--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,21 @@
                                 <a class="masters__content-btnLink btn-green">Подробнее о нас</a>
                             </div>
                         </div>
-
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="video">
+                        <div class="video__content">
+                            <div class="video__content-title">Посмотрите видео о нас</div>
+                            <div class="video__content-frame">
+                                <iframe class="video" src="https://www.youtube.com/embed/MlaGpRXoMPc"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
