added offers block

--- a/src/index.html
+++ b/src/index.html
@@ -133,6 +133,48 @@
                 </div>
             </section>
         </main>
+        <section class="section">
+            <div class="container">
+                <div class="offers">
+                    <div class="offers__content">
+                        <div class="offers__content-title">Наши услуги</div>
+                        <div class="offers__item">
+                            <div class="offers__item-pic">
+                                <img src="./images/offer-itemPic-1.jpg" alt="offers__item-pic1"
+                                    class="offers__item-img">
+                            </div>
+                            <div class="offers__item-dscr">
+                                <div class="offers__item-title">Мебель на заказ</div>
+                                <div class="offers__item-text">Мебель под заказ по индивидуальным размерам это гарантия
+                                    отличного качества, долговечность, экологичность и эксклюзивность наших изделий.<br>
+                                    Возможность создания своего неповторимого стиля, уникальность и неповторимость
+                                    каждого изделия.</div>
+                                <div class="offers__item-btn">
+                                    <a href="#" class="offers__item-link btn-green">Заказать мебель</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="offers__item">
+                            <div class="offers__item-pic">
+                                <img src="./images/offer-itemPic-2.jpg" alt="offers__item-pic1"
+                                    class="offers__item-img">
+                            </div>
+                            <div class="offers__item-dscr brown">
+                                <div class="offers__item-title">Мастер-классы</div>
+                                <div class="offers__item-text">Что делать, если память о предках хочется сохранить, но к
+                                    вашему интерьеру старая и испорченная мебель не подходит?<br>
+                                    Правильно, отреставрировать его и наслаждаться не только обновлённым видом мебели,
+                                    но и с теплотой помнить, что эта мебель была сделана талантливыми предками.
+                                </div>
+                                <div class="offers__item-btn">
+                                    <a href="#" class="offers__item-link btn-green">Купить мастер-класс</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         @@include('html/footer.html', {})
     </div>
