fixed fonts and paddings

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,12 @@
                             <img src="./images/opening-img.jpg" alt="opening-img" class="opening__img-pic">
                         </div>
                         <div class="opening__content">
-                            <div class="opening__content-text">Столярная мастерская NIKASON BRAND</div>
+                            <div class="opening__content-text text">Столярная мастерская NIKASON BRAND</div>
                             <div class="opening__content-title">
-                                <h1 class="opening__content-titleText">Изготовление и реставрация мебели</h1>
+                                <h1 class="opening__content-titleText title">Изготовление и реставрация мебели</h1>
                             </div>
-                            <div class="opening__content-subtitle">Авторская мебель ручной работы, сделанная с душой и
+                            <div class="opening__content-subtitle text">Авторская мебель ручной работы, сделанная с
+                                душой и
                                 трепетом.
                             </div>
                             <div class="opening__content-btn">
@@ -50,48 +51,50 @@
                 <div class="container">
                     <div class="about">
                         <div class="about__content">
-                            <div class="about__title">NIKASON BRAND это</div>
+                            <div class="about__title title">NIKASON BRAND это</div>
                             <div class="about__offers">
-                                <div class="about__offers-item">Производство авторской мебели из массива</div>
-                                <div class="about__offers-item">Реставрация, редизайн, ремонт деревянной мебели</div>
-                                <div class="about__offers-item">Производство мебели по индивидуальным размерам</div>
+                                <div class="about__offers-item text">Производство авторской мебели из массива</div>
+                                <div class="about__offers-item text">Реставрация, редизайн, ремонт деревянной мебели
+                                </div>
+                                <div class="about__offers-item text">Производство мебели по индивидуальным размерам
+                                </div>
                             </div>
-                            <div class="about__subtitle width-mini">Более 10 лет мы производим</div>
+                            <div class="about__subtitle width-mini title">Более 10 лет мы производим</div>
                             <div class="about__categories">
                                 <div class="about__categories-item">
                                     <img src="./images/door.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Двери</span>
+                                    <span class="about__categories-text text">Двери</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/closet.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Шкафы</span>
+                                    <span class="about__categories-text text">Шкафы</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/chair.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Столы и стулья</span>
+                                    <span class="about__categories-text text">Столы и стулья</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/drawers.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Комоды</span>
+                                    <span class="about__categories-text text">Комоды</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/drawer.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Тумбы</span>
+                                    <span class="about__categories-text text">Тумбы</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/gate.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Арки</span>
+                                    <span class="about__categories-text text">Арки</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/room-divider.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Перегородки</span>
+                                    <span class="about__categories-text text">Перегородки</span>
                                 </div>
                                 <div class="about__categories-item">
                                     <img src="./images/bed.png" alt="item-pic" class="about__categories-pic">
-                                    <span class="about__categories-text">Кровати</span>
+                                    <span class="about__categories-text text">Кровати</span>
                                 </div>
                             </div>
-                            <div class="about__subtitle width-medium">NIKASON BRAND это семейная мастеркая</div>
+                            <div class="about__subtitle width-medium title">NIKASON BRAND это семейная мастеркая</div>
                         </div>
                     </div>
                 </div>
@@ -103,15 +106,17 @@
                             <img src="./images/masters-img.jpg" alt="masters-photo" class="masters__img-pic">
                         </div>
                         <div class="masters__content">
-                            <div class="masters__content-title">Саргылана и Никита Колодезниковы-Матчитовы</div>
-                            <div class="masters__content-text">Саргылана - рестовратор-декоратор, преображает и дарит
+                            <div class="masters__content-title subtitle">Саргылана и Никита Колодезниковы-Матчитовы
+                            </div>
+                            <div class="masters__content-text text">Саргылана - рестовратор-декоратор, преображает и
+                                дарит
                                 вторую
                                 жизнь старой мебели.</div>
-                            <div class="masters__content-text">Никита - мастер по дереву, вся мебель делается его
+                            <div class="masters__content-text text">Никита - мастер по дереву, вся мебель делается его
                                 умелыми
                                 руками.</div>
                             <div class="masters__content-btn">
-                                <a class="masters__content-btnLink btn-green">Подробнее о нас</a>
+                                <a href="#" class="masters__content-btnLink btn-green">Подробнее о нас</a>
                             </div>
                         </div>
                     </div>
@@ -121,7 +126,7 @@
                 <div class="container">
                     <div class="video">
                         <div class="video__content">
-                            <div class="video__content-title">Посмотрите видео о нас</div>
+                            <div class="video__content-title title">Посмотрите видео о нас</div>
                             <div class="video__content-frame">
                                 <iframe class="video" src="https://www.youtube.com/embed/MlaGpRXoMPc"
                                     title="YouTube video player" frameborder="0"
@@ -132,69 +137,77 @@
                     </div>
                 </div>
             </section>
+            <section class="section">
+                <div class="container">
+                    <div class="offers">
+                        <div class="offers__content">
+                            <div class="offers__content-title title">Наши услуги</div>
+                            <div class="offers__item">
+                                <div class="offers__item-pic">
+                                    <img src="./images/offer-itemPic-1.jpg" alt="offers__item-pic1"
+                                        class="offers__item-img">
+                                </div>
+                                <div class="offers__item-dscr">
+                                    <div class="offers__item-title subtitle">Мебель на заказ</div>
+                                    <div class="offers__item-text text">Мебель под заказ по индивидуальным размерам это
+                                        гарантия
+                                        отличного качества, долговечность, экологичность и эксклюзивность наших
+                                        изделий.<br>
+                                        Возможность создания своего неповторимого стиля, уникальность и неповторимость
+                                        каждого изделия.</div>
+                                    <div class="offers__item-btn">
+                                        <a href="#" class="offers__item-link btn-green">Заказать мебель</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="offers__item">
+                                <div class="offers__item-pic">
+                                    <img src="./images/offer-itemPic-2.jpg" alt="offers__item-pic1"
+                                        class="offers__item-img">
+                                </div>
+                                <div class="offers__item-dscr brown">
+                                    <div class="offers__item-title subtitle">Мастер-классы</div>
+                                    <div class="offers__item-text text">Что делать, если память о предках хочется
+                                        сохранить,
+                                        но к
+                                        вашему интерьеру старая и испорченная мебель не подходит?<br>
+                                        Правильно, отреставрировать его и наслаждаться не только обновлённым видом
+                                        мебели,
+                                        но и с теплотой помнить, что эта мебель была сделана талантливыми предками.
+                                    </div>
+                                    <div class="offers__item-btn">
+                                        <a href="#" class="offers__item-link btn-green">Купить мастер-класс</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="garanties">
+                        <div class="garanties__content">
+                            <div class="garanties__content-title title">Гарантия качества мебели от NIKASON BRAND</div>
+                            <div class="garanties__outterBd">
+                                <div class="garanties__innerBd">
+                                    <div class="garanties__title title">Гарантия качества мебели от NIKASON BRAND</div>
+                                    <div class="garanties__text text">На каждое изделие ставим авторский логотип
+                                        (клеймо)
+                                        как
+                                        знак качества и узнаваемости мастера. Таким образом мастер несёт ответственность
+                                        за
+                                        каждое изделие помеченное печатью. Есть гарантия на 12 месяцев. </div>
+                                    <div class="garanties__logo">
+                                        <img src="./images/logo-big.png" alt="logo" class="garanties__logo-pic">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-        <section class="section">
-            <div class="container">
-                <div class="offers">
-                    <div class="offers__content">
-                        <div class="offers__content-title">Наши услуги</div>
-                        <div class="offers__item">
-                            <div class="offers__item-pic">
-                                <img src="./images/offer-itemPic-1.jpg" alt="offers__item-pic1"
-                                    class="offers__item-img">
-                            </div>
-                            <div class="offers__item-dscr">
-                                <div class="offers__item-title">Мебель на заказ</div>
-                                <div class="offers__item-text">Мебель под заказ по индивидуальным размерам это гарантия
-                                    отличного качества, долговечность, экологичность и эксклюзивность наших изделий.<br>
-                                    Возможность создания своего неповторимого стиля, уникальность и неповторимость
-                                    каждого изделия.</div>
-                                <div class="offers__item-btn">
-                                    <a href="#" class="offers__item-link btn-green">Заказать мебель</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="offers__item">
-                            <div class="offers__item-pic">
-                                <img src="./images/offer-itemPic-2.jpg" alt="offers__item-pic1"
-                                    class="offers__item-img">
-                            </div>
-                            <div class="offers__item-dscr brown">
-                                <div class="offers__item-title">Мастер-классы</div>
-                                <div class="offers__item-text">Что делать, если память о предках хочется сохранить, но к
-                                    вашему интерьеру старая и испорченная мебель не подходит?<br>
-                                    Правильно, отреставрировать его и наслаждаться не только обновлённым видом мебели,
-                                    но и с теплотой помнить, что эта мебель была сделана талантливыми предками.
-                                </div>
-                                <div class="offers__item-btn">
-                                    <a href="#" class="offers__item-link btn-green">Купить мастер-класс</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <div class="garanties">
-                    <div class="garanties__content">
-                        <div class="garanties__content-title">Гарантия качества мебели от NIKASON BRAND</div>
-                        <div class="garanties__outterBd">
-                            <div class="garanties__innerBd">
-                                <div class="garanties__title">Гарантия качества мебели от NIKASON BRAND</div>
-                                <div class="garanties__text">На каждое изделие ставим авторский логотип (клеймо) как
-                                    знак качества и узнаваемости мастера. Таким образом мастер несёт ответственность за
-                                    каждое изделие помеченное печатью. Есть гарантия на 12 месяцев. </div>
-                                <div class="garanties__logo">
-                                    <img src="./images/logo-big.png" alt="logo" class="garanties__logo-pic">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         @@include('html/footer.html', {})
     </div>
