--- a/src/html/header.html
+++ b/src/html/header.html
@@ -9,19 +9,19 @@
                         </a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">
+                        <a href="#" class="header__list-link passive-link">
                             Мебель на заказ
                         </a>
                     </li>
                 </ul>
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">
+                        <a href="#" class="header__list-link passive-link">
                             Контакты
                         </a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">
+                        <a href="#" class="header__list-link passive-link">
                             О нас
                         </a>
                     </li>
