--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
             <section class="section">
                 <div class="container">
                     <div class="opening">
-                        <div class="opening__img">
+                        <div class="opening__img" data-aos="fade-right">
                             <img src="./images/opening-img.jpg" alt="opening-img" class="opening__img-pic">
                         </div>
-                        <div class="opening__content">
+                        <div class="opening__content" data-aos="fade-left">
                             <div class="opening__content-text text">Столярная мастерская NIKASON BRAND</div>
                             <div class="opening__content-title">
                                 <h1 class="opening__content-titleText title">Изготовление и реставрация мебели</h1>
@@ -51,16 +51,17 @@
                 <div class="container">
                     <div class="about">
                         <div class="about__content">
-                            <div class="about__title title">NIKASON BRAND это</div>
-                            <div class="about__offers">
+                            <div class="about__title title" data-aos="fade-in">NIKASON BRAND это</div>
+                            <div class="about__offers" data-aos="zoom-in">
                                 <div class="about__offers-item text">Производство авторской мебели из массива</div>
                                 <div class="about__offers-item text">Реставрация, редизайн, ремонт деревянной мебели
                                 </div>
                                 <div class="about__offers-item text">Производство мебели по индивидуальным размерам
                                 </div>
                             </div>
-                            <div class="about__subtitle width-mini title">Более 10 лет мы производим</div>
-                            <div class="about__categories">
+                            <div class="about__subtitle width-mini title" data-aos="fade-in">Более 10 лет мы производим
+                            </div>
+                            <div class="about__categories" data-aos="flip-up">
                                 <div class="about__categories-item">
                                     <img src="./images/door.png" alt="item-pic" class="about__categories-pic">
                                     <span class="about__categories-text text">Двери</span>
@@ -94,7 +95,8 @@
                                     <span class="about__categories-text text">Кровати</span>
                                 </div>
                             </div>
-                            <div class="about__subtitle width-medium title">NIKASON BRAND это семейная мастеркая</div>
+                            <div class="about__subtitle width-medium title" data-aos="fade-in">NIKASON BRAND это
+                                семейная мастеркая</div>
                         </div>
                     </div>
                 </div>
@@ -102,10 +104,10 @@
             <section class="section">
                 <div class="container">
                     <div class="masters">
-                        <div class="masters__img">
+                        <div class="masters__img" data-aos="fade-right">
                             <img src="./images/masters-img.jpg" alt="masters-photo" class="masters__img-pic">
                         </div>
-                        <div class="masters__content">
+                        <div class="masters__content" data-aos="fade-left">
                             <div class="masters__content-title subtitle">Саргылана и Никита Колодезниковы-Матчитовы
                             </div>
                             <div class="masters__content-text text">Саргылана - рестовратор-декоратор, преображает и
@@ -126,7 +128,7 @@
                 <div class="container">
                     <div class="video">
                         <div class="video__content">
-                            <div class="video__content-title title">Посмотрите видео о нас</div>
+                            <div class="video__content-title title" data-aos="fade-in">Посмотрите видео о нас</div>
                             <div class="video__content-frame">
                                 <iframe class="video" src="https://www.youtube.com/embed/MlaGpRXoMPc"
                                     title="YouTube video player" frameborder="0"
@@ -141,13 +143,13 @@
                 <div class="container">
                     <div class="offers">
                         <div class="offers__content">
-                            <div class="offers__content-title title">Наши услуги</div>
+                            <div class="offers__content-title title" data-aos="fade-in">Наши услуги</div>
                             <div class="offers__item">
-                                <div class="offers__item-pic">
+                                <div class="offers__item-pic" data-aos="fade-right">
                                     <img src="./images/offer-itemPic-1.jpg" alt="offers__item-pic1"
                                         class="offers__item-img">
                                 </div>
-                                <div class="offers__item-dscr">
+                                <div class="offers__item-dscr" data-aos="fade-left">
                                     <div class="offers__item-title subtitle">Мебель на заказ</div>
                                     <div class="offers__item-text text">Мебель под заказ по индивидуальным размерам это
                                         гарантия
@@ -161,11 +163,11 @@
                                 </div>
                             </div>
                             <div class="offers__item">
-                                <div class="offers__item-pic">
+                                <div class="offers__item-pic" data-aos="fade-right">
                                     <img src="./images/offer-itemPic-2.jpg" alt="offers__item-pic1"
                                         class="offers__item-img">
                                 </div>
-                                <div class="offers__item-dscr brown">
+                                <div class="offers__item-dscr brown" data-aos="fade-left">
                                     <div class="offers__item-title subtitle">Мастер-классы</div>
                                     <div class="offers__item-text text">Что делать, если память о предках хочется
                                         сохранить,
@@ -187,8 +189,9 @@
             <section class="section">
                 <div class="container">
                     <div class="garanties">
-                        <div class="garanties__content">
-                            <div class="garanties__content-title title">Гарантия качества мебели от NIKASON BRAND</div>
+                        <div class="garanties__content" data-aos="fade-in">
+                            <div class=" garanties__content-title title">Гарантия качества мебели от NIKASON BRAND
+                            </div>
                             <div class="garanties__outterBd">
                                 <div class="garanties__innerBd">
                                     <div class="garanties__title title">Гарантия качества мебели от NIKASON BRAND</div>
@@ -198,7 +201,7 @@
                                         знак качества и узнаваемости мастера. Таким образом мастер несёт ответственность
                                         за
                                         каждое изделие помеченное печатью. Есть гарантия на 12 месяцев. </div>
-                                    <div class="garanties__logo">
+                                    <div class="garanties__logo" data-aos="fade-up">
                                         <img src="./images/logo-big.png" alt="logo" class="garanties__logo-pic">
                                     </div>
                                 </div>
