fixed buggs after adding animations

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
                         <div class="masters__img" data-aos="fade-right">
                             <img src="./images/masters-img.jpg" alt="masters-photo" class="masters__img-pic">
                         </div>
-                        <div class="masters__content" data-aos="fade-left">
+                        <div class="masters__content light-green" data-aos="fade-left">
                             <div class="masters__content-title subtitle">Саргылана и Никита Колодезниковы-Матчитовы
                             </div>
                             <div class="masters__content-text text">Саргылана - рестовратор-декоратор, преображает и
