--- a/src/html/headerMC.html
+++ b/src/html/headerMC.html
@@ -4,7 +4,7 @@
             <div class="header__lists">
                 <ul class="header__list ">
                     <li class="header__list-item">
-                        <a href="../mc.html" class="header__list-link passive-link">
+                        <a href="../index2.html" class="header__list-link active-link">
                             Мастер-классы
                         </a>
                     </li>
@@ -27,9 +27,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="header__logo">
+            <a href="../index.html" class="header__logo">
                 <img src="../images/logo-big.png" alt="logo" class="header__logo-pic">
-            </div>
+            </a>
         </div>
         <div class="menu__bg">
             <div class="menu-btn js-menu-btn">
