added content for the second page

--- a/src/mc.html
+++ b/src/mc.html
@@ -217,6 +217,70 @@
                     </div>
                 </div>
             </section>
+            <section class="section">
+                <div class="container">
+                    <div class="joinery">
+                        <div class="joinery__content">
+                            <div class="joinery__title title">Мастер-классы по столярному делу</div>
+                            <div class="joinery__items">
+                                <div class="joinery__item">
+                                    <div class="joinery__item-pic">
+                                        <img src="./images/joinery-table.jpg" alt="joinery-pic"
+                                            class="joinery__item-img">
+                                    </div>
+                                    <div class="joinery__item-text text">Консольный столик</div>
+                                </div>
+                                <div class="joinery__item">
+                                    <div class="joinery__item-pic">
+                                        <img src="./images/joinery-forbeginners.jpg" alt="joinery-pic"
+                                            class="joinery__item-img">
+                                    </div>
+                                    <div class="joinery__item-text text">Столярное дело для начинающих</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="redesign">
+                        <div class="redesign__content">
+                            <div class="redesign__texts">
+                                <div class="redesign__texts-title title">Руководство по редизайну деревянной мебели
+                                </div>
+                                <div class="redesign__texts-dscr text">Здесь мы собрали всю информацию от подбора
+                                    инстурментов и материалов до сборки мебели и фурнитуры. Чтобы вы самостоятельно
+                                    могли разобраться с нюансами работы со старой мебелью из дерева. Наше руководство
+                                    непременно станет вашей настольной книгой по реставрации мебели.</div>
+                                <div class="redesign__texts-btn">
+                                    <a href="" class="redesign__texts-link btn-green">Подробнее</a>
+                                </div>
+                            </div>
+                            <div class="redesign__card">
+                                <div class="redesign__card-logo">
+                                    <img src="./images/logo-big.png" alt="card-logo" class="redesign__card-pic">
+                                </div>
+                                <div class="redesign__card-text text">Краткое руководство по редизайну мебели</div>
+                                <div class="redesign__card-title title">Реставрируй с NIKASON</div>
+                                <div class="redesign__card-items">
+                                    <div class="redesign__card-item">
+                                        <img src="./images/before3.jpg" alt="card-pic" class="redesign__card-img">
+                                        <div class="redesign__card-dscr">До</div>
+                                    </div>
+                                    <div class="redesign__card-item">
+                                        <img src="./images/after3.jpg" alt="card-pic" class="redesign__card-img">
+                                        <div class="redesign__card-dscr">После</div>
+                                    </div>
+                                </div>
+                                <a href="" class="redesign__card-link text">
+                                    @mebel_ot_nikason
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         @@include('html/footer.html', {})
